refactoring of new package und build plugins and other stuff
- config values can now be set as environment variables properly
- When setting config values with the -o parameter, the key, value separator is now = instead of :
- make root configuration keys optional
- fix online demo
- add some error handling to the new plugin logic

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -100,4 +100,6 @@ nav:
       - Architecture: architecture.md
       - Plugins:
           - Generator Plugin: generator_plugin.md
+          - Build Plugin: build_plugin.md
+          - Package Plugin: package_plugin.md
 
