--- a/src/pydjinni/generator/it/function/CMakeLists.txt
+++ b/src/pydjinni/generator/it/function/CMakeLists.txt
@@ -4,5 +4,5 @@ define_test_case(FunctionTest
     INTERFACE function.djinni
     SOURCES src/helper.cpp
     OPTIONS
-        generate.cpp.namespace:test::function
+        generate.cpp.namespace=test::function
 )
