--- a/src/pydjinni/generator/objc/it/enum/CMakeLists.txt
+++ b/src/pydjinni/generator/objc/it/enum/CMakeLists.txt
@@ -1,6 +1,6 @@
 objc_test_case(EnumTest
     OPTIONS
-        generate.objcpp.namespace:test::enum_test::objcpp
+        generate.objcpp.namespace=test::enum_test::objcpp
     SOURCES
         tests/EnumTests.m
 )
