--- a/src/pydjinni/generator/objc/it/flags/CMakeLists.txt
+++ b/src/pydjinni/generator/objc/it/flags/CMakeLists.txt
@@ -1,6 +1,6 @@
 objc_test_case(FlagsTest
     OPTIONS
-        generate.objcpp.namespace:test::flags_test::objcpp
+        generate.objcpp.namespace=test::flags_test::objcpp
     SOURCES
         tests/FlagsTests.m
 )
