--- a/src/pydjinni/generator/objc/it/interface/CMakeLists.txt
+++ b/src/pydjinni/generator/objc/it/interface/CMakeLists.txt
@@ -1,7 +1,7 @@
 objc_test_case(InterfaceTest
     OPTIONS
-        generate.objcpp.namespace:test::interface_test::objcpp
-        generate.objc.strict_protocols:True
+        generate.objcpp.namespace=test::interface_test::objcpp
+        generate.objc.strict_protocols=True
     SOURCES
         tests/InterfaceTests.m
 )
