--- a/src/pydjinni/generator/it/flags/CMakeLists.txt
+++ b/src/pydjinni/generator/it/flags/CMakeLists.txt
@@ -5,5 +5,5 @@ define_test_case(FlagsTest
     SOURCES
         src/helper.cpp
     OPTIONS
-        generate.cpp.namespace:test::flags_test
+        generate.cpp.namespace=test::flags_test
 )
