--- a/src/pydjinni/generator/java/it/record/CMakeLists.txt
+++ b/src/pydjinni/generator/java/it/record/CMakeLists.txt
@@ -1,9 +1,9 @@
 java_test_case(RecordTest
     OPTIONS
-        generate.java.package:test.record
-        generate.jni.identifier.file.prefix:marshal_
-        generate.jni.identifier.file.style:snake_case
-        generate.jni.namespace:test::record::jni
+        generate.java.package=test.record
+        generate.jni.identifier.file.prefix=marshal_
+        generate.jni.identifier.file.style=snake_case
+        generate.jni.namespace=test::record::jni
     SOURCES
         src/BaseRecord.java
         tests/TestPrimitiveTypes.java
