--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -7,7 +7,7 @@ on:
     tags-ignore:
       - '**'
   release:
-    types: [created, released]
+    types: [published]
 jobs:
   test:
     strategy:
@@ -15,7 +15,7 @@ jobs:
         python-version: [ "3.10", "3.11" ]
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
@@ -32,7 +32,7 @@ jobs:
         os: [ ubuntu-latest, windows-latest, macos-latest ]
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - uses: actions/setup-java@v3
         with:
           distribution: 'corretto'
@@ -62,7 +62,7 @@ jobs:
         os: [ ubuntu-latest, windows-latest, macos-latest ]
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Set up Python 3.11
         uses: actions/setup-python@v4
         with:
@@ -76,7 +76,7 @@ jobs:
     name: Test-build documentation
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
@@ -93,7 +93,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
@@ -115,10 +117,11 @@ jobs:
     needs: [build, test, integration_test, cmake_test, test_docs]
     if: github.event_name == 'release'
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - uses: actions/download-artifact@v3
         with:
           name: dist
+          path: dist/
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
@@ -126,18 +129,19 @@ jobs:
           cache: 'pip'
       - name: Install build dependencies
         run: pip install .[publish]
-      - name: Publish package to TestPyPi
-        if: github.event.release.draft
-        run: twine upload -r testpypi -p ${{ env.TWINE_TESTPYPI_PASSWORD }} --disable-progress-bar dist/*
       - name: Publish package to PyPi
-        if: ${{ !github.event.release.draft }}
-        run: twine upload --disable-progress-bar dist/*
+        env:
+          TWINE_PASSWORD: ${{ secrets.TWINE_PASSWORD }}
+          TWINE_USERNAME: __token__
+        run: twine upload --disable-progress-bar dist/*.whl
   publish_docs:
     runs-on: ubuntu-latest
     needs: [publish]
-    if: ${{ github.event_name == 'release' && !github.event.release.draft && !github.event.release.prerelease }}
+    if: github.event_name == 'release'
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
@@ -145,5 +149,9 @@ jobs:
           cache: 'pip'
       - name: Install doc dependencies
         run: pip install .[doc]
+      - name: Configure Git user
+        run: |
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
       - name: Build and publish docs
-        run: mike deploy --push --update-aliases $(git describe --tag | grep -o '^v\d*.\d*') latest
+        run: mike deploy --push --update-aliases $(git describe --tag) latest
