--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,6 @@
 prune docs
 global-include support_lib/**/*
-global-include template/**/*
+global-include templates/**/*
 global-exclude CMakeLists.txt
 global-exclude tests/**
 global-exclude it/**
