chore: add integration testing that validates expected output
on each run of an integration test, a precondition is testing
if the files contain the expected results, if an expectation is provided.
If the expectation doesn't match, the precondition fails and the tests are aborted.

--- a/src/pydjinni/generator/it/interface/CMakeLists.txt
+++ b/src/pydjinni/generator/it/interface/CMakeLists.txt
@@ -6,6 +6,7 @@ define_test_case(InterfaceTest
         src/calculator.cpp
         src/calculator_impl.cpp
         src/calculator_impl.hpp
+        src/deprecation_test.cpp
     OPTIONS
         generate.cpp.namespace=test::interface
 )
