fix(test): fix C# and C++ tests

--- a/src/pydjinni/generator/cppcli/it/record/CMakeLists.txt
+++ b/src/pydjinni/generator/cppcli/it/record/CMakeLists.txt
@@ -24,4 +24,5 @@ cppcli_test_case(RecordTest
         tests/OptionalTypesTest.cs
         tests/CollectionTypesTest.cs
         tests/BinaryTypesTest.cs
+        tests/NestedTypeTest.cs
 )
