--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -116,7 +116,7 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     needs: [build, test, integration_test, cmake_test, test_docs]
-    if: github.event_name == 'release'
+    if: github.event_name == 'release' || (github.ref == 'refs/heads/main' && github.event_name != 'workflow_dispatch')
     steps:
       - uses: actions/checkout@v4
       - uses: actions/download-artifact@v3
@@ -130,11 +130,18 @@ jobs:
           cache: 'pip'
       - name: Install build dependencies
         run: pip install .[publish]
-      - name: Publish package to PyPi
+      - name: Publish package to PyPI
+        if: github.event_name == 'release'
         env:
-          TWINE_PASSWORD: ${{ secrets.TWINE_PASSWORD }}
+          TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
           TWINE_USERNAME: __token__
         run: twine upload --disable-progress-bar dist/*.whl
+      - name: Publish package to TestPyPI
+        if: github.ref == 'refs/heads/main' && github.event_name != 'workflow_dispatch'
+        env:
+          TWINE_PASSWORD: ${{ secrets.TESTPYPI_PASSWORD }}
+          TWINE_USERNAME: __token__
+        run: twine upload -r testpypi --disable-progress-bar dist/*.whl
   publish_docs:
     runs-on: ubuntu-latest
     needs: [publish]
