--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -93,8 +93,6 @@ jobs:
           path: site/
   build:
     runs-on: ubuntu-latest
-    env:
-      SETUPTOOLS_SCM_OVERRIDES_FOR_PYDJINNI: "local_scheme='no-local-version'"
     steps:
       - uses: actions/checkout@v4
         with:
@@ -118,7 +116,7 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     needs: [build, test, integration_test, cmake_test, test_docs]
-    if: github.event_name == 'release' || (github.ref == 'refs/heads/main' && github.event_name != 'workflow_dispatch')
+    if: github.event_name == 'release'
     steps:
       - uses: actions/checkout@v4
       - uses: actions/download-artifact@v3
@@ -138,12 +136,6 @@ jobs:
           TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
           TWINE_USERNAME: __token__
         run: twine upload --disable-progress-bar dist/*.whl
-      - name: Publish package to TestPyPI
-        if: github.ref == 'refs/heads/main' && github.event_name != 'workflow_dispatch'
-        env:
-          TWINE_PASSWORD: ${{ secrets.TESTPYPI_PASSWORD }}
-          TWINE_USERNAME: __token__
-        run: twine upload -r testpypi --disable-progress-bar dist/*.whl
   publish_docs:
     runs-on: ubuntu-latest
     needs: [publish]
