--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,8 +31,9 @@ endif()
 set(PYDJINNI_LANGUAGE_TARGETS ${PYDJINNI_LANGUAGE_TARGETS_DEFAULT} CACHE STRING "List of languages that should be targeted" )
 
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/modules")
-Include(FetchContent)
+find_package(PyDjinni REQUIRED)
 Include(PyDjinni)
+Include(FetchContent)
 
 if(BUILD_TESTING)
     Include(IntegrationTesting)
