--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -10,6 +10,7 @@ on:
   pull_request:
 jobs:
   test:
+    name: test
     strategy:
       matrix:
         os: [ ubuntu-latest, windows-latest, macos-latest ]
@@ -27,7 +28,7 @@ jobs:
       - name: Run tests
         run: pytest --ignore cmake
   integration_test:
-    name: Support Lib Unit-test & Integration tests
+    name: integration test
     strategy:
       matrix:
         os: [ ubuntu-latest, windows-latest, macos-latest ]
@@ -59,7 +60,7 @@ jobs:
       - name: Run Tests
         run: ctest --test-dir build --output-on-failure -C Debug
   cmake_test:
-    name: CMake module tests
+    name: CMake test
     strategy:
       matrix:
         os: [ ubuntu-latest, windows-latest, macos-latest ]
@@ -76,7 +77,7 @@ jobs:
       - name: Run tests
         run: pytest cmake/tests
   test_docs:
-    name: Test-build documentation
+    name: documentation test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -94,6 +95,7 @@ jobs:
           name: site
           path: site/
   build:
+    name: build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -116,6 +118,7 @@ jobs:
           path: dist/
 
   publish:
+    name: publish
     runs-on: ubuntu-latest
     needs: [build, test, integration_test, cmake_test, test_docs]
     if: github.event_name == 'release'
@@ -138,6 +141,7 @@ jobs:
           TWINE_USERNAME: __token__
         run: twine upload --disable-progress-bar dist/*.whl
   publish_docs:
+    name: publish documentation
     runs-on: ubuntu-latest
     needs: [publish]
     if: github.event_name == 'release'
