--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -70,7 +70,6 @@ jobs:
         with:
           fetch-depth: 0
       - uses: actions/setup-java@v4
-        if: matrix.target == 'android'
         with:
           distribution: 'corretto'
           java-version: '11'
@@ -161,7 +160,7 @@ jobs:
   publish:
     name: publish
     runs-on: ubuntu-latest
-    needs: [build, test, integration_test, cmake_test, test_docs]
+    needs: [build, test, integration_test, package_test, cmake_test, test_docs]
     if: github.event_name == 'release'
     steps:
       - uses: actions/checkout@v4
