fix: explicit include of CMakeLists.txt in pydjinni-init template

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -10,3 +10,4 @@ exclude cmake/**
 include src/pydjinni/cmake/modules/FindPyDjinni.cmake
 include src/pydjinni/cmake/modules/PyDjinni.cmake
 include src/pydjinni_init/templates/conan_cmake/template/CMakeLists.txt
+include src/pydjinni_init/templates/conan_cmake/template/lib/CMakeLists.txt
