fix: populate group_id and artifact_id parameters in pydjinni-init template for android build

--- a/src/pydjinni_init/templates/conan_cmake/template/pydjinni.yaml
+++ b/src/pydjinni_init/templates/conan_cmake/template/pydjinni.yaml
@@ -51,6 +51,9 @@ package:
   aar:
     platforms:
       android: [x86_64, armv8]
+    publish:
+      group_id: {{ cpp_namespace | replace("::", ".") }}
+      artifact_id: {{ target | lower }}
 {%- endif %}
 {%- if "windows" in platforms %}
   nuget:
