fix: specify nuget author and description in pydjinni-init template

--- a/src/pydjinni_init/templates/conan_cmake/template/pydjinni.yaml
+++ b/src/pydjinni_init/templates/conan_cmake/template/pydjinni.yaml
@@ -61,4 +61,6 @@ package:
       windows: [x86_64]
     publish:
       net_version: net8.0
+      authors: [changeit]
+      description: changeit
 {% endif %}
