--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -40,7 +40,7 @@ jobs:
       - uses: actions/setup-java@v4
         with:
           distribution: 'corretto'
-          java-version: '11'
+          java-version: '17'
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
@@ -59,6 +59,45 @@ jobs:
         run: cmake --build build
       - name: Run Tests
         run: ctest --test-dir build --output-on-failure -C Debug
+  package_test:
+    name: package test
+    strategy:
+      matrix:
+        os: [ ubuntu-latest, windows-latest, macos-latest ]
+    runs-on: ${{ matrix.os }}
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - uses: actions/setup-java@v4
+        with:
+          distribution: 'corretto'
+          java-version: '17'
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+          cache: 'pip'
+      - name: Install pydjinni
+        run: pip install .
+      - name: generate project from template
+        run: pydjinni-init conan-cmake --output-dir test-library --platforms android,darwin,windows --target TestLibrary --cpp-namespace test::library --version 0.0.0
+      - name: install requirements
+        run : pip install -r requirements.txt
+        working-directory: test-library
+      - name: Set up Conan
+        run: conan profile detect
+      - name: package library for android
+        run: pydjinni package aar android
+        working-directory: test-library
+      - name: package library for darwin
+        if: matrix.os == 'macos-latest'
+        run: pydjinni package swiftpackage ios macos
+        working-directory: test-library
+      - name: package library for windows
+        if: matrix.os == 'windows-latest'
+        run: pydjinni package nuget windows
+        working-directory: test-library
   cmake_test:
     name: CMake test
     strategy:
@@ -120,7 +159,7 @@ jobs:
   publish:
     name: publish
     runs-on: ubuntu-latest
-    needs: [build, test, integration_test, cmake_test, test_docs]
+    needs: [build, test, integration_test, package_test, cmake_test, test_docs]
     if: github.event_name == 'release'
     steps:
       - uses: actions/checkout@v4
