--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -7,4 +7,7 @@ exclude .github/**
 exclude .idea/**
 exclude cmake-build-*/**
 exclude cmake/**
+include src/pydjinni/cmake/modules/FindPyDjinni.cmake
 include src/pydjinni/cmake/modules/PyDjinni.cmake
+include src/pydjinni_init/templates/conan_cmake/template/CMakeLists.txt
+include src/pydjinni_init/templates/conan_cmake/template/lib/CMakeLists.txt
