--- a/src/pydjinni/generator/objc/it/CMakeLists.txt
+++ b/src/pydjinni/generator/objc/it/CMakeLists.txt
@@ -48,7 +48,9 @@ function(objc_test_case TEST_CASE_NAME)
     target_include_directories(${TEST_LIBRARY_NAME} PUBLIC ${objc_INCLUDE_DIR} ${objcpp_INCLUDE_DIR} ${objcpp_SOURCE_DIR})
     target_compile_options(${TEST_LIBRARY_NAME} PUBLIC "-fobjc-arc")
     target_link_libraries(${TEST_LIBRARY_NAME} PUBLIC test::${TEST_CASE_NAME} "-framework Foundation")
+    set_target_properties(${TEST_LIBRARY_NAME} PROPERTIES FOLDER "it/${TEST_CASE_NAME}")
     xctest_add_bundle(${TEST_BUNDLE_NAME} ${TEST_LIBRARY_NAME} ${TEST_CASE_SOURCES})
+    set_target_properties(${TEST_BUNDLE_NAME} PROPERTIES FOLDER "it/${TEST_CASE_NAME}")
     xctest_add_test(Objc.${TEST_CASE_NAME} ${TEST_BUNDLE_NAME})
 endfunction()
 
