--- a/src/pydjinni/generator/cppcli/it/CMakeLists.txt
+++ b/src/pydjinni/generator/cppcli/it/CMakeLists.txt
@@ -52,6 +52,7 @@ function(cppcli_test_case TEST_CASE_NAME)
     set_target_properties(${CPPCLI_TARGET_NAME} PROPERTIES
         VS_DOTNET_REFERENCES "System;System.Core"
         COMMON_LANGUAGE_RUNTIME ""
+        FOLDER "it/${TEST_CASE_NAME}"
     )
     target_link_libraries(${CPPCLI_TARGET_NAME} PUBLIC test::${TEST_CASE_NAME})
     add_library(test::cppcli::${TEST_CASE_NAME} ALIAS ${CPPCLI_TARGET_NAME})
@@ -63,6 +64,7 @@ function(cppcli_test_case TEST_CASE_NAME)
     set_target_properties(${CS_TARGET_NAME}  PROPERTIES
         VS_DOTNET_REFERENCES "System;System.Core"
         VS_PACKAGE_REFERENCES "nunit_4.2.2;NUnit3TestAdapter_4.6.0;Microsoft.NET.Test.Sdk_17.12.0"
+        FOLDER "it/${TEST_CASE_NAME}"
     )
 
     target_link_libraries(${CS_TARGET_NAME} PUBLIC test::cppcli::${TEST_CASE_NAME})
