--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools==69.1.1", "setuptools_scm[toml]==8.0.4"]
+requires = ["setuptools==75.6.0", "setuptools_scm[toml]==8.1.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -21,17 +21,18 @@ classifiers = [
 ]
 keywords = ["djinni"]
 dependencies = [
+    "importlib-metadata>=8.5,<9",
     "click>=8.1,<9",
     "Jinja2>=3.1,<4",
-    "pydantic>=2.6.3,<3",
+    "pydantic>=2.7.0,<3",
     "pydantic-settings>=2.1.0,<3",
-    'rich>=12.6,<13',
+    'rich>=13.9,<14',
     'PyYAML>=6,<7',
     'dotmap>=1.3,<2',
     'tomli>=1.1.0,<2; python_version < "3.11"',
     'StrEnum>=0.4; python_version < "3.11"',
     'tomli_w>=1.0,<2',
-    'setuptools>=65',
+    'setuptools>=75',
     'antlr4-python3-runtime==4.13.1',
     'mistune>=3,<4',
     'pygls>=1.3,<2',
@@ -41,10 +42,10 @@ dependencies = [
 
 [project.optional-dependencies]
 dev = [
-    "pytest==7.4.4",
-    "pytest-asyncio==0.23.5",
-    "pytest-lsp==0.4.1",
-    "coverage==7.2.3",
+    "pytest==8.3.3",
+    "pytest-asyncio==0.24.0",
+    "pytest-lsp==0.4.3",
+    "coverage==7.6.7",
     "antlr4-tools==0.2.1"
 ]
 publish = [
@@ -52,14 +53,14 @@ publish = [
     "build==1.0.3"
 ]
 doc = [
-    "mkdocs-material==9.5.11",
+    "mkdocs-material==9.5.45",
     "mkdocs-click==0.8.1",
-    "mike==2.0.0",
+    "mike==2.1.3",
     "jsonref==1.1.0",
-    "mkdocs-macros-plugin==1.0.5",
+    "mkdocs-macros-plugin==1.3.7",
     "mkdocs-gen-files==0.5.0",
-    "mkdocstrings[python]==0.24.0",
-    "setuptools_scm"
+    "mkdocstrings[python]==0.27.0",
+    "setuptools_scm==8.1.0",
 ]
 
 [project.urls]
