--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -56,7 +56,7 @@ jobs:
       - name: Configure CMake
         run: cmake -B build
       - name: Build
-        run: cmake --build build
+        run: cmake --build build --parallel
       - name: Run Tests
         run: ctest --test-dir build --output-on-failure -C Debug
   package_test:
