--- a/src/pydjinni/packaging/aar/template/gradle/wrapper/gradle-wrapper.properties
+++ b/src/pydjinni/packaging/aar/template/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,7 @@
-#Thu Sep 14 20:56:37 CEST 2023
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-8.0-bin.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-8.9-bin.zip
+networkTimeout=10000
+validateDistributionUrl=true
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
